fix(waybar): use FiraCode-Retina font

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,7 +1,7 @@
 * {
   border: none;
   border-radius: 0;
-  font-family: "Fira Mono Nerd Font Medium", "Font Awesome 5 Free", "Font Awesome 5 Brands", "FontAwesome";
+  font-family: "FiraCode-Retina", "Font Awesome 5 Free", "Font Awesome 5 Brands", "FontAwesome";
   font-weight: 600;
   min-height: 24px;
 }
